@@ -2,6 +2,7 @@
  - Fix CSS processing in Form.
  - Fix doc in Form.
  - Fix module abstract.
+ - Rename variable in Utils.
  - Rewrite Input to use helpers.
 
 0.02 2024-01-07T00:39:59+01:00
